--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title>Where's My Baby?</title>
     <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Yellowtail" rel="stylesheet">
 </head>
 
 <body>
@@ -15,9 +16,8 @@
   src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
   crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGv5NErrmEwgC0c5EJrD-jQ8KEOpnZGVE&libraries=places&sensor=false"></script>
 </body>
 
 </html>
