--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Where's My Baby?</title>
     <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Yellowtail" rel="stylesheet">
+    <link rel="icon" href="assets/bb.ico" type="image/x-icon" />
 </head>
 
 <body>
